Ajustes finais do layout

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@angular/core": "^20.2.4",
     "@angular/forms": "^20.2.4",
     "@angular/material": "^20.2.2",
+    "@angular/material-moment-adapter": "^20.2.2",
     "@angular/platform-browser": "^20.2.4",
     "@angular/router": "^20.2.4",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
